src/snapshots/templates__test__parse_if_statement.snap
---
source: src/main.rs
assertion_line: 488
expression: "Hello {% if is_user %}User{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            Text(
                "User",
            ),
        ],
        [],
    ),
]
