src/snapshots/templates__test__parse_import.snap
---
source: src/main.rs
assertion_line: 696
expression: "{> import user.{User}\n{{ name }}"

---
[
    Import(
        "user.{User}",
    ),
    Identifier(
        "name",
    ),
]
