src/snapshots/templates__test__parse_nested_if_statements.snap
---
source: src/main.rs
assertion_line: 513
expression: "Hello {% if is_user %}{% if is_admin %}Admin{% else %}User{% endif %}{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            If(
                "is_admin",
                [
                    Text(
                        "Admin",
                    ),
                ],
                [
                    Text(
                        "User",
                    ),
                ],
            ),
        ],
        [],
    ),
]
