src/snapshots/templates__test__parse_pure_text.snap
---
source: src/main.rs
assertion_line: 196
expression: "Hello name, good to meet you"

---
[
    Text(
        "Hello name, good to meet you",
    ),
]
