src/snapshots/templates__test__parse_single_parens.snap
---
source: src/main.rs
assertion_line: 330
expression: "Hello { name }, good to meet you"

---
[
    Text(
        "Hello { name }, good to meet you",
    ),
]
