src/snapshots/templates__test__parse_with.snap
---
source: src/main.rs
assertion_line: 767
expression: "{> with user as User\n{{ user }}"

---
[
    With(
        "user",
        "User",
    ),
    Identifier(
        "user",
    ),
]
