src/snapshots/templates__test__pure_text.snap
---
source: src/main.rs
assertion_line: 120
expression: "Hello name, good to meet you"

---
[
    Text(
        "Hello name, good to meet you",
    ),
]
